y.output
   0  $accept : programme $end

   1  programme : PROG AO corps AF

   2  corps : liste_declarations liste_instructions

   3  liste_declarations :
   4                     | liste_declarations declaration

   5  liste_instructions :
   6                     | liste_instructions instruction PV

   7  declaration : declaration_type PV
   8              | declaration_variable PV
   9              | declaration_procedure
  10              | declaration_fonction

  11  declaration_type : TYPEDEF IDF DP suite_declaration_type

  12  suite_declaration_type : STRUCT AO liste_champs AF PV
  13                         | TAB dimension DE nom_type

  14  dimension : CO liste_dimensions CF

  15  liste_dimensions : une_dimension
  16                   | liste_dimensions VIR une_dimension

  17  une_dimension : CSTE_ENTIERE PP CSTE_ENTIERE

  18  liste_champs : un_champ
  19               | liste_champs PV un_champ

  20  un_champ : IDF DP nom_type PV

  21  nom_type : type_simple
  22           | IDF

  23  type_simple : ENTIER
  24              | REEL
  25              | BOOL
  26              | CHAR
  27              | CHAINE CO CSTE_ENTIERE CF

  28  declaration_variable : VAR IDF DP nom_type

  29  declaration_procedure : PROC IDF PO liste_param PF AO corps AF

  30  declaration_fonction : nom_type FCT IDF PO liste_param PF AO corps AF

  31  liste_param :
  32              | un_param
  33              | liste_param VIR un_param

  34  un_param : IDF DP type_simple

  35  instruction : affectation
  36              | condition
  37              | tant_que
  38              | appel
  39              | RET resultat_retourne

  40  resultat_retourne :
  41                    | expression
  42                    | variable

  43  appel : IDF liste_arguments

  44  liste_arguments :
  45                  | PO liste_args PF

  46  liste_args : expression
  47             | liste_args VIR expression

  48  condition : SI expression_booleenne ALORS liste_instructions SINON liste_instructions

  49  tant_que : TQ expression_booleenne FAIRE liste_instructions

  50  affectation : variable OPAFF expression

  51  variable : IDF
  52           | IDF CO CSTE_ENTIERE CF

  53  expression : e
  54             | expression_booleenne
  55             | CSTE_BOOL
  56             | CSTE_CHAINE
  57             | CSTE_CHAR
  58             | CSTE_ENTIERE
  59             | CSTE_REELLE

  60  e : e PL e1
  61    | e MO e1
  62    | e1

  63  e1 : e1 MU e2
  64     | e1 DIV e2
  65     | e2

  66  e2 : PO e PF
  67     | CSTE_ENTIERE
  68     |

  69  egalite_booleenne : IDF EGAL IDF
  70                    | IDF INF IDF
  71                    | IDF SUP IDF
  72                    | IDF INFEGAL IDF
  73                    | IDF SUPEGAL IDF
  74                    | CSTE_BOOL EGAL IDF
  75                    | IDF EGAL CSTE_BOOL
  76                    | CSTE_BOOL EGAL CSTE_BOOL

  77  expression_booleenne : egalite_booleenne
  78                       | NON expression_booleenne

state 0
	$accept : . programme $end  (0)

	PROG  shift 1
	.  error

	programme  goto 2


state 1
	programme : PROG . AO corps AF  (1)

	AO  shift 3
	.  error


state 2
	$accept : programme . $end  (0)

	$end  accept


state 3
	programme : PROG AO . corps AF  (1)
	liste_declarations : .  (3)

	.  reduce 3

	corps  goto 4
	liste_declarations  goto 5


state 4
	programme : PROG AO corps . AF  (1)

	AF  shift 6
	.  error


5: shift/reduce conflict (shift 14, reduce 5) on IDF
state 5
	corps : liste_declarations . liste_instructions  (2)
	liste_declarations : liste_declarations . declaration  (4)
	liste_instructions : .  (5)

	ENTIER  shift 7
	REEL  shift 8
	BOOL  shift 9
	CHAR  shift 10
	CHAINE  shift 11
	VAR  shift 12
	TYPEDEF  shift 13
	IDF  shift 14
	PROC  shift 15
	AF  reduce 5
	RET  reduce 5
	SI  reduce 5
	TQ  reduce 5

	liste_instructions  goto 16
	declaration  goto 17
	declaration_type  goto 18
	declaration_variable  goto 19
	declaration_procedure  goto 20
	declaration_fonction  goto 21
	nom_type  goto 22
	type_simple  goto 23


state 6
	programme : PROG AO corps AF .  (1)

	.  reduce 1


state 7
	type_simple : ENTIER .  (23)

	.  reduce 23


state 8
	type_simple : REEL .  (24)

	.  reduce 24


state 9
	type_simple : BOOL .  (25)

	.  reduce 25


state 10
	type_simple : CHAR .  (26)

	.  reduce 26


state 11
	type_simple : CHAINE . CO CSTE_ENTIERE CF  (27)

	CO  shift 24
	.  error


state 12
	declaration_variable : VAR . IDF DP nom_type  (28)

	IDF  shift 25
	.  error


state 13
	declaration_type : TYPEDEF . IDF DP suite_declaration_type  (11)

	IDF  shift 26
	.  error


state 14
	nom_type : IDF .  (22)

	.  reduce 22


state 15
	declaration_procedure : PROC . IDF PO liste_param PF AO corps AF  (29)

	IDF  shift 27
	.  error


state 16
	corps : liste_declarations liste_instructions .  (2)
	liste_instructions : liste_instructions . instruction PV  (6)

	IDF  shift 28
	RET  shift 29
	SI  shift 30
	TQ  shift 31
	AF  reduce 2

	instruction  goto 32
	affectation  goto 33
	condition  goto 34
	tant_que  goto 35
	appel  goto 36
	variable  goto 37


state 17
	liste_declarations : liste_declarations declaration .  (4)

	.  reduce 4


state 18
	declaration : declaration_type . PV  (7)

	PV  shift 38
	.  error


state 19
	declaration : declaration_variable . PV  (8)

	PV  shift 39
	.  error


state 20
	declaration : declaration_procedure .  (9)

	.  reduce 9


state 21
	declaration : declaration_fonction .  (10)

	.  reduce 10


state 22
	declaration_fonction : nom_type . FCT IDF PO liste_param PF AO corps AF  (30)

	FCT  shift 40
	.  error


state 23
	nom_type : type_simple .  (21)

	.  reduce 21


state 24
	type_simple : CHAINE CO . CSTE_ENTIERE CF  (27)

	CSTE_ENTIERE  shift 41
	.  error


state 25
	declaration_variable : VAR IDF . DP nom_type  (28)

	DP  shift 42
	.  error


state 26
	declaration_type : TYPEDEF IDF . DP suite_declaration_type  (11)

	DP  shift 43
	.  error


state 27
	declaration_procedure : PROC IDF . PO liste_param PF AO corps AF  (29)

	PO  shift 44
	.  error


state 28
	appel : IDF . liste_arguments  (43)
	variable : IDF .  (51)
	variable : IDF . CO CSTE_ENTIERE CF  (52)
	liste_arguments : .  (44)

	CO  shift 45
	PO  shift 46
	PV  reduce 44
	OPAFF  reduce 51

	liste_arguments  goto 47


29: reduce/reduce conflict (reduce 40, reduce 68) on PV
state 29
	instruction : RET . resultat_retourne  (39)
	resultat_retourne : .  (40)
	e2 : .  (68)

	PO  shift 48
	CSTE_ENTIERE  shift 49
	CSTE_CHAR  shift 50
	CSTE_CHAINE  shift 51
	CSTE_BOOL  shift 52
	CSTE_REELLE  shift 53
	IDF  shift 54
	NON  shift 55
	PV  reduce 40
	PL  reduce 68
	MO  reduce 68
	MU  reduce 68
	DIV  reduce 68

	resultat_retourne  goto 56
	expression  goto 57
	variable  goto 58
	expression_booleenne  goto 59
	e  goto 60
	e1  goto 61
	e2  goto 62
	egalite_booleenne  goto 63


state 30
	condition : SI . expression_booleenne ALORS liste_instructions SINON liste_instructions  (48)

	CSTE_BOOL  shift 64
	IDF  shift 65
	NON  shift 55
	.  error

	expression_booleenne  goto 66
	egalite_booleenne  goto 63


state 31
	tant_que : TQ . expression_booleenne FAIRE liste_instructions  (49)

	CSTE_BOOL  shift 64
	IDF  shift 65
	NON  shift 55
	.  error

	expression_booleenne  goto 67
	egalite_booleenne  goto 63


state 32
	liste_instructions : liste_instructions instruction . PV  (6)

	PV  shift 68
	.  error


state 33
	instruction : affectation .  (35)

	.  reduce 35


state 34
	instruction : condition .  (36)

	.  reduce 36


state 35
	instruction : tant_que .  (37)

	.  reduce 37


state 36
	instruction : appel .  (38)

	.  reduce 38


state 37
	affectation : variable . OPAFF expression  (50)

	OPAFF  shift 69
	.  error


state 38
	declaration : declaration_type PV .  (7)

	.  reduce 7


state 39
	declaration : declaration_variable PV .  (8)

	.  reduce 8


state 40
	declaration_fonction : nom_type FCT . IDF PO liste_param PF AO corps AF  (30)

	IDF  shift 70
	.  error


state 41
	type_simple : CHAINE CO CSTE_ENTIERE . CF  (27)

	CF  shift 71
	.  error


state 42
	declaration_variable : VAR IDF DP . nom_type  (28)

	ENTIER  shift 7
	REEL  shift 8
	BOOL  shift 9
	CHAR  shift 10
	CHAINE  shift 11
	IDF  shift 14
	.  error

	nom_type  goto 72
	type_simple  goto 23


state 43
	declaration_type : TYPEDEF IDF DP . suite_declaration_type  (11)

	TAB  shift 73
	STRUCT  shift 74
	.  error

	suite_declaration_type  goto 75


state 44
	declaration_procedure : PROC IDF PO . liste_param PF AO corps AF  (29)
	liste_param : .  (31)

	IDF  shift 76
	VIR  reduce 31
	PF  reduce 31

	liste_param  goto 77
	un_param  goto 78


state 45
	variable : IDF CO . CSTE_ENTIERE CF  (52)

	CSTE_ENTIERE  shift 79
	.  error


state 46
	liste_arguments : PO . liste_args PF  (45)
	e2 : .  (68)

	PO  shift 48
	CSTE_ENTIERE  shift 49
	CSTE_CHAR  shift 50
	CSTE_CHAINE  shift 51
	CSTE_BOOL  shift 52
	CSTE_REELLE  shift 53
	IDF  shift 65
	NON  shift 55
	VIR  reduce 68
	PF  reduce 68
	PL  reduce 68
	MO  reduce 68
	MU  reduce 68
	DIV  reduce 68

	expression  goto 80
	liste_args  goto 81
	expression_booleenne  goto 59
	e  goto 60
	e1  goto 61
	e2  goto 62
	egalite_booleenne  goto 63


state 47
	appel : IDF liste_arguments .  (43)

	.  reduce 43


state 48
	e2 : PO . e PF  (66)
	e2 : .  (68)

	PO  shift 48
	CSTE_ENTIERE  shift 82
	PF  reduce 68
	PL  reduce 68
	MO  reduce 68
	MU  reduce 68
	DIV  reduce 68

	e  goto 83
	e1  goto 61
	e2  goto 62


49: reduce/reduce conflict (reduce 58, reduce 67) on PV
49: reduce/reduce conflict (reduce 58, reduce 67) on VIR
49: reduce/reduce conflict (reduce 58, reduce 67) on PF
state 49
	expression : CSTE_ENTIERE .  (58)
	e2 : CSTE_ENTIERE .  (67)

	PV  reduce 58
	VIR  reduce 58
	PF  reduce 58
	PL  reduce 67
	MO  reduce 67
	MU  reduce 67
	DIV  reduce 67


state 50
	expression : CSTE_CHAR .  (57)

	.  reduce 57


state 51
	expression : CSTE_CHAINE .  (56)

	.  reduce 56


state 52
	expression : CSTE_BOOL .  (55)
	egalite_booleenne : CSTE_BOOL . EGAL IDF  (74)
	egalite_booleenne : CSTE_BOOL . EGAL CSTE_BOOL  (76)

	EGAL  shift 84
	PV  reduce 55
	VIR  reduce 55
	PF  reduce 55


state 53
	expression : CSTE_REELLE .  (59)

	.  reduce 59


state 54
	variable : IDF .  (51)
	variable : IDF . CO CSTE_ENTIERE CF  (52)
	egalite_booleenne : IDF . EGAL IDF  (69)
	egalite_booleenne : IDF . INF IDF  (70)
	egalite_booleenne : IDF . SUP IDF  (71)
	egalite_booleenne : IDF . INFEGAL IDF  (72)
	egalite_booleenne : IDF . SUPEGAL IDF  (73)
	egalite_booleenne : IDF . EGAL CSTE_BOOL  (75)

	CO  shift 45
	INF  shift 85
	SUP  shift 86
	EGAL  shift 87
	INFEGAL  shift 88
	SUPEGAL  shift 89
	PV  reduce 51


state 55
	expression_booleenne : NON . expression_booleenne  (78)

	CSTE_BOOL  shift 64
	IDF  shift 65
	NON  shift 55
	.  error

	expression_booleenne  goto 90
	egalite_booleenne  goto 63


state 56
	instruction : RET resultat_retourne .  (39)

	.  reduce 39


state 57
	resultat_retourne : expression .  (41)

	.  reduce 41


state 58
	resultat_retourne : variable .  (42)

	.  reduce 42


state 59
	expression : expression_booleenne .  (54)

	.  reduce 54


state 60
	expression : e .  (53)
	e : e . PL e1  (60)
	e : e . MO e1  (61)

	PL  shift 91
	MO  shift 92
	PV  reduce 53
	VIR  reduce 53
	PF  reduce 53


state 61
	e : e1 .  (62)
	e1 : e1 . MU e2  (63)
	e1 : e1 . DIV e2  (64)

	MU  shift 93
	DIV  shift 94
	PV  reduce 62
	VIR  reduce 62
	PF  reduce 62
	PL  reduce 62
	MO  reduce 62


state 62
	e1 : e2 .  (65)

	.  reduce 65


state 63
	expression_booleenne : egalite_booleenne .  (77)

	.  reduce 77


state 64
	egalite_booleenne : CSTE_BOOL . EGAL IDF  (74)
	egalite_booleenne : CSTE_BOOL . EGAL CSTE_BOOL  (76)

	EGAL  shift 84
	.  error


state 65
	egalite_booleenne : IDF . EGAL IDF  (69)
	egalite_booleenne : IDF . INF IDF  (70)
	egalite_booleenne : IDF . SUP IDF  (71)
	egalite_booleenne : IDF . INFEGAL IDF  (72)
	egalite_booleenne : IDF . SUPEGAL IDF  (73)
	egalite_booleenne : IDF . EGAL CSTE_BOOL  (75)

	INF  shift 85
	SUP  shift 86
	EGAL  shift 87
	INFEGAL  shift 88
	SUPEGAL  shift 89
	.  error


state 66
	condition : SI expression_booleenne . ALORS liste_instructions SINON liste_instructions  (48)

	ALORS  shift 95
	.  error


state 67
	tant_que : TQ expression_booleenne . FAIRE liste_instructions  (49)

	FAIRE  shift 96
	.  error


state 68
	liste_instructions : liste_instructions instruction PV .  (6)

	.  reduce 6


state 69
	affectation : variable OPAFF . expression  (50)
	e2 : .  (68)

	PO  shift 48
	CSTE_ENTIERE  shift 49
	CSTE_CHAR  shift 50
	CSTE_CHAINE  shift 51
	CSTE_BOOL  shift 52
	CSTE_REELLE  shift 53
	IDF  shift 65
	NON  shift 55
	PV  reduce 68
	PL  reduce 68
	MO  reduce 68
	MU  reduce 68
	DIV  reduce 68

	expression  goto 97
	expression_booleenne  goto 59
	e  goto 60
	e1  goto 61
	e2  goto 62
	egalite_booleenne  goto 63


state 70
	declaration_fonction : nom_type FCT IDF . PO liste_param PF AO corps AF  (30)

	PO  shift 98
	.  error


state 71
	type_simple : CHAINE CO CSTE_ENTIERE CF .  (27)

	.  reduce 27


state 72
	declaration_variable : VAR IDF DP nom_type .  (28)

	.  reduce 28


state 73
	suite_declaration_type : TAB . dimension DE nom_type  (13)

	CO  shift 99
	.  error

	dimension  goto 100


state 74
	suite_declaration_type : STRUCT . AO liste_champs AF PV  (12)

	AO  shift 101
	.  error


state 75
	declaration_type : TYPEDEF IDF DP suite_declaration_type .  (11)

	.  reduce 11


state 76
	un_param : IDF . DP type_simple  (34)

	DP  shift 102
	.  error


state 77
	declaration_procedure : PROC IDF PO liste_param . PF AO corps AF  (29)
	liste_param : liste_param . VIR un_param  (33)

	VIR  shift 103
	PF  shift 104
	.  error


state 78
	liste_param : un_param .  (32)

	.  reduce 32


state 79
	variable : IDF CO CSTE_ENTIERE . CF  (52)

	CF  shift 105
	.  error


state 80
	liste_args : expression .  (46)

	.  reduce 46


state 81
	liste_arguments : PO liste_args . PF  (45)
	liste_args : liste_args . VIR expression  (47)

	VIR  shift 106
	PF  shift 107
	.  error


state 82
	e2 : CSTE_ENTIERE .  (67)

	.  reduce 67


state 83
	e : e . PL e1  (60)
	e : e . MO e1  (61)
	e2 : PO e . PF  (66)

	PF  shift 108
	PL  shift 91
	MO  shift 92
	.  error


state 84
	egalite_booleenne : CSTE_BOOL EGAL . IDF  (74)
	egalite_booleenne : CSTE_BOOL EGAL . CSTE_BOOL  (76)

	CSTE_BOOL  shift 109
	IDF  shift 110
	.  error


state 85
	egalite_booleenne : IDF INF . IDF  (70)

	IDF  shift 111
	.  error


state 86
	egalite_booleenne : IDF SUP . IDF  (71)

	IDF  shift 112
	.  error


state 87
	egalite_booleenne : IDF EGAL . IDF  (69)
	egalite_booleenne : IDF EGAL . CSTE_BOOL  (75)

	CSTE_BOOL  shift 113
	IDF  shift 114
	.  error


state 88
	egalite_booleenne : IDF INFEGAL . IDF  (72)

	IDF  shift 115
	.  error


state 89
	egalite_booleenne : IDF SUPEGAL . IDF  (73)

	IDF  shift 116
	.  error


state 90
	expression_booleenne : NON expression_booleenne .  (78)

	.  reduce 78


state 91
	e : e PL . e1  (60)
	e2 : .  (68)

	PO  shift 48
	CSTE_ENTIERE  shift 82
	PV  reduce 68
	VIR  reduce 68
	PF  reduce 68
	PL  reduce 68
	MO  reduce 68
	MU  reduce 68
	DIV  reduce 68

	e1  goto 117
	e2  goto 62


state 92
	e : e MO . e1  (61)
	e2 : .  (68)

	PO  shift 48
	CSTE_ENTIERE  shift 82
	PV  reduce 68
	VIR  reduce 68
	PF  reduce 68
	PL  reduce 68
	MO  reduce 68
	MU  reduce 68
	DIV  reduce 68

	e1  goto 118
	e2  goto 62


state 93
	e1 : e1 MU . e2  (63)
	e2 : .  (68)

	PO  shift 48
	CSTE_ENTIERE  shift 82
	PV  reduce 68
	VIR  reduce 68
	PF  reduce 68
	PL  reduce 68
	MO  reduce 68
	MU  reduce 68
	DIV  reduce 68

	e2  goto 119


state 94
	e1 : e1 DIV . e2  (64)
	e2 : .  (68)

	PO  shift 48
	CSTE_ENTIERE  shift 82
	PV  reduce 68
	VIR  reduce 68
	PF  reduce 68
	PL  reduce 68
	MO  reduce 68
	MU  reduce 68
	DIV  reduce 68

	e2  goto 120


state 95
	condition : SI expression_booleenne ALORS . liste_instructions SINON liste_instructions  (48)
	liste_instructions : .  (5)

	.  reduce 5

	liste_instructions  goto 121


state 96
	tant_que : TQ expression_booleenne FAIRE . liste_instructions  (49)
	liste_instructions : .  (5)

	.  reduce 5

	liste_instructions  goto 122


state 97
	affectation : variable OPAFF expression .  (50)

	.  reduce 50


state 98
	declaration_fonction : nom_type FCT IDF PO . liste_param PF AO corps AF  (30)
	liste_param : .  (31)

	IDF  shift 76
	VIR  reduce 31
	PF  reduce 31

	liste_param  goto 123
	un_param  goto 78


state 99
	dimension : CO . liste_dimensions CF  (14)

	CSTE_ENTIERE  shift 124
	.  error

	liste_dimensions  goto 125
	une_dimension  goto 126


state 100
	suite_declaration_type : TAB dimension . DE nom_type  (13)

	DE  shift 127
	.  error


state 101
	suite_declaration_type : STRUCT AO . liste_champs AF PV  (12)

	IDF  shift 128
	.  error

	liste_champs  goto 129
	un_champ  goto 130


state 102
	un_param : IDF DP . type_simple  (34)

	ENTIER  shift 7
	REEL  shift 8
	BOOL  shift 9
	CHAR  shift 10
	CHAINE  shift 11
	.  error

	type_simple  goto 131


state 103
	liste_param : liste_param VIR . un_param  (33)

	IDF  shift 76
	.  error

	un_param  goto 132


state 104
	declaration_procedure : PROC IDF PO liste_param PF . AO corps AF  (29)

	AO  shift 133
	.  error


state 105
	variable : IDF CO CSTE_ENTIERE CF .  (52)

	.  reduce 52


state 106
	liste_args : liste_args VIR . expression  (47)
	e2 : .  (68)

	PO  shift 48
	CSTE_ENTIERE  shift 49
	CSTE_CHAR  shift 50
	CSTE_CHAINE  shift 51
	CSTE_BOOL  shift 52
	CSTE_REELLE  shift 53
	IDF  shift 65
	NON  shift 55
	VIR  reduce 68
	PF  reduce 68
	PL  reduce 68
	MO  reduce 68
	MU  reduce 68
	DIV  reduce 68

	expression  goto 134
	expression_booleenne  goto 59
	e  goto 60
	e1  goto 61
	e2  goto 62
	egalite_booleenne  goto 63


state 107
	liste_arguments : PO liste_args PF .  (45)

	.  reduce 45


state 108
	e2 : PO e PF .  (66)

	.  reduce 66


state 109
	egalite_booleenne : CSTE_BOOL EGAL CSTE_BOOL .  (76)

	.  reduce 76


state 110
	egalite_booleenne : CSTE_BOOL EGAL IDF .  (74)

	.  reduce 74


state 111
	egalite_booleenne : IDF INF IDF .  (70)

	.  reduce 70


state 112
	egalite_booleenne : IDF SUP IDF .  (71)

	.  reduce 71


state 113
	egalite_booleenne : IDF EGAL CSTE_BOOL .  (75)

	.  reduce 75


state 114
	egalite_booleenne : IDF EGAL IDF .  (69)

	.  reduce 69


state 115
	egalite_booleenne : IDF INFEGAL IDF .  (72)

	.  reduce 72


state 116
	egalite_booleenne : IDF SUPEGAL IDF .  (73)

	.  reduce 73


state 117
	e : e PL e1 .  (60)
	e1 : e1 . MU e2  (63)
	e1 : e1 . DIV e2  (64)

	MU  shift 93
	DIV  shift 94
	PV  reduce 60
	VIR  reduce 60
	PF  reduce 60
	PL  reduce 60
	MO  reduce 60


state 118
	e : e MO e1 .  (61)
	e1 : e1 . MU e2  (63)
	e1 : e1 . DIV e2  (64)

	MU  shift 93
	DIV  shift 94
	PV  reduce 61
	VIR  reduce 61
	PF  reduce 61
	PL  reduce 61
	MO  reduce 61


state 119
	e1 : e1 MU e2 .  (63)

	.  reduce 63


state 120
	e1 : e1 DIV e2 .  (64)

	.  reduce 64


state 121
	liste_instructions : liste_instructions . instruction PV  (6)
	condition : SI expression_booleenne ALORS liste_instructions . SINON liste_instructions  (48)

	IDF  shift 28
	RET  shift 29
	SI  shift 30
	SINON  shift 135
	TQ  shift 31
	.  error

	instruction  goto 32
	affectation  goto 33
	condition  goto 34
	tant_que  goto 35
	appel  goto 36
	variable  goto 37


state 122
	liste_instructions : liste_instructions . instruction PV  (6)
	tant_que : TQ expression_booleenne FAIRE liste_instructions .  (49)

	IDF  shift 28
	RET  shift 29
	SI  shift 30
	TQ  shift 31
	PV  reduce 49

	instruction  goto 32
	affectation  goto 33
	condition  goto 34
	tant_que  goto 35
	appel  goto 36
	variable  goto 37


state 123
	declaration_fonction : nom_type FCT IDF PO liste_param . PF AO corps AF  (30)
	liste_param : liste_param . VIR un_param  (33)

	VIR  shift 103
	PF  shift 136
	.  error


state 124
	une_dimension : CSTE_ENTIERE . PP CSTE_ENTIERE  (17)

	PP  shift 137
	.  error


state 125
	dimension : CO liste_dimensions . CF  (14)
	liste_dimensions : liste_dimensions . VIR une_dimension  (16)

	CF  shift 138
	VIR  shift 139
	.  error


state 126
	liste_dimensions : une_dimension .  (15)

	.  reduce 15


state 127
	suite_declaration_type : TAB dimension DE . nom_type  (13)

	ENTIER  shift 7
	REEL  shift 8
	BOOL  shift 9
	CHAR  shift 10
	CHAINE  shift 11
	IDF  shift 14
	.  error

	nom_type  goto 140
	type_simple  goto 23


state 128
	un_champ : IDF . DP nom_type PV  (20)

	DP  shift 141
	.  error


state 129
	suite_declaration_type : STRUCT AO liste_champs . AF PV  (12)
	liste_champs : liste_champs . PV un_champ  (19)

	PV  shift 142
	AF  shift 143
	.  error


state 130
	liste_champs : un_champ .  (18)

	.  reduce 18


state 131
	un_param : IDF DP type_simple .  (34)

	.  reduce 34


state 132
	liste_param : liste_param VIR un_param .  (33)

	.  reduce 33


state 133
	declaration_procedure : PROC IDF PO liste_param PF AO . corps AF  (29)
	liste_declarations : .  (3)

	.  reduce 3

	corps  goto 144
	liste_declarations  goto 5


state 134
	liste_args : liste_args VIR expression .  (47)

	.  reduce 47


state 135
	condition : SI expression_booleenne ALORS liste_instructions SINON . liste_instructions  (48)
	liste_instructions : .  (5)

	.  reduce 5

	liste_instructions  goto 145


state 136
	declaration_fonction : nom_type FCT IDF PO liste_param PF . AO corps AF  (30)

	AO  shift 146
	.  error


state 137
	une_dimension : CSTE_ENTIERE PP . CSTE_ENTIERE  (17)

	CSTE_ENTIERE  shift 147
	.  error


state 138
	dimension : CO liste_dimensions CF .  (14)

	.  reduce 14


state 139
	liste_dimensions : liste_dimensions VIR . une_dimension  (16)

	CSTE_ENTIERE  shift 124
	.  error

	une_dimension  goto 148


state 140
	suite_declaration_type : TAB dimension DE nom_type .  (13)

	.  reduce 13


state 141
	un_champ : IDF DP . nom_type PV  (20)

	ENTIER  shift 7
	REEL  shift 8
	BOOL  shift 9
	CHAR  shift 10
	CHAINE  shift 11
	IDF  shift 14
	.  error

	nom_type  goto 149
	type_simple  goto 23


state 142
	liste_champs : liste_champs PV . un_champ  (19)

	IDF  shift 128
	.  error

	un_champ  goto 150


state 143
	suite_declaration_type : STRUCT AO liste_champs AF . PV  (12)

	PV  shift 151
	.  error


state 144
	declaration_procedure : PROC IDF PO liste_param PF AO corps . AF  (29)

	AF  shift 152
	.  error


state 145
	liste_instructions : liste_instructions . instruction PV  (6)
	condition : SI expression_booleenne ALORS liste_instructions SINON liste_instructions .  (48)

	IDF  shift 28
	RET  shift 29
	SI  shift 30
	TQ  shift 31
	PV  reduce 48

	instruction  goto 32
	affectation  goto 33
	condition  goto 34
	tant_que  goto 35
	appel  goto 36
	variable  goto 37


state 146
	declaration_fonction : nom_type FCT IDF PO liste_param PF AO . corps AF  (30)
	liste_declarations : .  (3)

	.  reduce 3

	corps  goto 153
	liste_declarations  goto 5


state 147
	une_dimension : CSTE_ENTIERE PP CSTE_ENTIERE .  (17)

	.  reduce 17


state 148
	liste_dimensions : liste_dimensions VIR une_dimension .  (16)

	.  reduce 16


state 149
	un_champ : IDF DP nom_type . PV  (20)

	PV  shift 154
	.  error


state 150
	liste_champs : liste_champs PV un_champ .  (19)

	.  reduce 19


state 151
	suite_declaration_type : STRUCT AO liste_champs AF PV .  (12)

	.  reduce 12


state 152
	declaration_procedure : PROC IDF PO liste_param PF AO corps AF .  (29)

	.  reduce 29


state 153
	declaration_fonction : nom_type FCT IDF PO liste_param PF AO corps . AF  (30)

	AF  shift 155
	.  error


state 154
	un_champ : IDF DP nom_type PV .  (20)

	.  reduce 20


state 155
	declaration_fonction : nom_type FCT IDF PO liste_param PF AO corps AF .  (30)

	.  reduce 30


State 5 contains 1 shift/reduce conflict.
State 29 contains 1 reduce/reduce conflict.
State 49 contains 3 reduce/reduce conflicts.


51 terminals, 35 nonterminals
79 grammar rules, 156 states

grammar parser grammar
symbol# value# symbol
     0      0  $end
     1    256  error
     2    257  PROG
     3    258  PV
     4    259  DP
     5    260  CO
     6    261  CF
     7    262  VIR
     8    263  PP
     9    264  PO
    10    265  PF
    11    266  AO
    12    267  AF
    13    268  TAB
    14    269  DE
    15    270  STRUCT
    16    271  CSTE_ENTIERE
    17    272  CSTE_CHAR
    18    273  CSTE_CHAINE
    19    274  CSTE_BOOL
    20    275  CSTE_REELLE
    21    276  ENTIER
    22    277  REEL
    23    278  BOOL
    24    279  CHAR
    25    280  CHAINE
    26    281  VAR
    27    282  TYPEDEF
    28    283  IDF
    29    284  PROC
    30    285  FCT
    31    286  RET
    32    287  SI
    33    288  ALORS
    34    289  SINON
    35    290  TQ
    36    291  FAIRE
    37    292  OPAFF
    38    293  INF
    39    294  SUP
    40    295  PL
    41    296  MO
    42    297  MU
    43    298  DIV
    44    299  MOD
    45    300  NON
    46    301  ET
    47    302  OU
    48    303  EGAL
    49    304  INFEGAL
    50    305  SUPEGAL
    51    306  $accept
    52    307  programme
    53    308  corps
    54    309  liste_declarations
    55    310  liste_instructions
    56    311  declaration
    57    312  instruction
    58    313  declaration_type
    59    314  declaration_variable
    60    315  declaration_procedure
    61    316  declaration_fonction
    62    317  suite_declaration_type
    63    318  liste_champs
    64    319  dimension
    65    320  nom_type
    66    321  liste_dimensions
    67    322  une_dimension
    68    323  un_champ
    69    324  type_simple
    70    325  liste_param
    71    326  un_param
    72    327  affectation
    73    328  condition
    74    329  tant_que
    75    330  appel
    76    331  resultat_retourne
    77    332  expression
    78    333  variable
    79    334  liste_arguments
    80    335  liste_args
    81    336  expression_booleenne
    82    337  e
    83    338  e1
    84    339  e2
    85    340  egalite_booleenne
